Minor style changes

--- a/app/index.html
+++ b/app/index.html
@@ -2,18 +2,26 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Flickr Gallery</title>
+    <title>Flickr Public Feed</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/custom.css">
+    <link rel="canonical" href="http://www.example.com" />
   </head>
   <body ng-app="potatoFlickrApp">     
     
     <div ng-controller="FlickrController" class="container">
       <div ng-view=""></div>
     </div>
+
+    <script>
+      window.___gcfg = {
+        lang: 'zh-CN',
+        parsetags: 'onload'
+      };
+    </script>
 
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
@@ -22,6 +30,7 @@
     <script src="bower_components/angular-resource/angular-resource.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
     <script src="scripts/app.js"></script>
 
   </body>
