--- a/app/index.html
+++ b/app/index.html
@@ -24,5 +24,8 @@
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     <script src="scripts/app.js"></script>
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <g:plusone></g:plusone>
+  
   </body>
 </html>
